--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">SkipTheFast</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Journey</string>
+    <string name="tab_text_2">Calendar</string>
+    <string name="tab_text_3">Analytics</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_journey">Hello This Is Journey</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
