--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="tab_text_2">Calendar</string>
     <string name="tab_text_3">Analytics</string>
 
+    <string name="sign_in"><u>Sign Up</u></string>
+
     <string name="form_tab_1"> </string>
     <string name="form_tab_2"> </string>
     <string name="form_tab_3"> </string>
